--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions@0.0.3",
     "dev": "nodemon --exec babel-node server",
     "migrate": "npx prisma migrate dev --preview-feature",
     "studio": "npx prisma studio"
@@ -16,12 +17,15 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^2.16.1",
-    "apollo-server": "^2.19.2",
+    "apollo-server": "^2.21.0",
+    "apollo-server-express": "^2.19.2",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -30,6 +34,10 @@
     "@prisma/cli": "^2.15.0",
     "nodemon": "^2.0.7",
     "prisma": "^2.16.1"
+  },
+  "resolutions": {
+    "fs-capacitor": "^6.2.0",
+    "graphql-upload": "^11.0.0"
   },
   "bugs": {
     "url": "https://github.com/johnsteve108/Koreagram/issues"
